# libdansdl2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  _shizz.cpp  a.out  configure.sh  def_audio.h  def_herramientas.h  def_input.h  def_tools.h  def_video.h  doxigen-config  doxigen-config.bak  doxygen-config  libDan2.h  makefile_comun  makefile_linux  makefile_win
audio/: CMakeLists.txt  audio_channel.cpp  audio_channel.h  audio_controller.h  music.cpp  resource_manager.cpp  resource_manager.h  sound.h
audio/audio_callback_interface/: audio_callback_interface.h
audio/audio_channel/: CMakeLists.txt  audio_channel.cpp  audio_channel.h
audio/audio_controller/: CMakeLists.txt  audio_controller.cpp  audio_controller.h
audio/music/: CMakeLists.txt  music.cpp  music.h
audio/real_audio_channel/: CMakeLists.txt  real_audio_channel.cpp  real_audio_channel.h
audio/resource_manager/: resource_manager.cpp  resource_manager.h
audio/sound/: CMakeLists.txt  sound.cpp  sound.h
audio/sound_queue/: sound_queue.cpp  sound_queue.h
herramientas/controlador_argumentos/: controlador_argumentos.cpp  controlador_argumentos.h
herramientas/herramientas/: herramientas.cpp  herramientas.h
herramientas/localizador_base/: localizador_base.cpp  localizador_base.h
herramientas/poligono_2d/: poligono_2d.h
herramientas/punto_2d/: punto_2d.h
herramientas/vector_2d/: vector_2d.cpp  vector_2d.h
include/: libDan2.h
include/lda/: audio_callback_interface.h  audio_channel.h  audio_controller.h  exception.h  music.h  real_audio_channel.h  resource_manager.h  sound.h
include/ldi/: activity_event.h  filter.h  joystick.h  keyboard.h  mouse.h  sdl_input.h
include/ldt/: aabb_ray_collision.h  box.h  converters.h  lib.h  line.h  log.h  point_2d.h  polygon_2d.h  sat_2d.h  sdl_tools.h  segment_2d.h  tools.h  tools.templates.h  vector_2d.h
include/ldv/: bitmap_representation.h  box_representation.h  camera.h  canvas.h  draw.h  draw_info.h  group_representation.h  image.h  line_representation.h  point_representation.h  polygon_representation.h  primitive_representation.h  raster_representation.h  (+9 more)
input/: CMakeLists.txt
lib/: CMakeLists.txt
make/: linux.template  makefile_common
src/: CMakeLists.txt
tests/: a.out  align.cpp  alignment.cpp
tools/: CMakeLists.txt
video/: CMakeLists.txt
video/camara/: camara.cpp  camara.h
video/camera/: CMakeLists.txt  camera.cpp  camera.h
video/color/: CMakeLists.txt  color.cpp  color.h
video/draw_info/: CMakeLists.txt  draw_info.cpp  draw_info.h
video/fuente_ttf/: fuente_ttf.cpp  fuente_ttf.h
video/gestores/: gestor_superficies.h  gestor_texturas.h
video/info_volcado/: info_volcado.h
video/manager/: surface_manager.cpp  surface_manager.h  texture_manager.cpp  texture_manager.h
video/pantalla/: pantalla.cpp  pantalla.h
video/rect/: CMakeLists.txt  rect.cpp  rect.h
video/representacion/: representacion.cpp  representacion.h
video/representacion/representacion_agrupada/: representacion_agrupada.cpp  representacion_agrupada.h
video/representacion/representacion_grafica/: representacion_grafica.cpp  representacion_grafica.h
video/representacion/representacion_grafica/representacion_bitmap/: representacion_bitmap.cpp  representacion_bitmap.h  representacion_bitmap_patron.cpp  representacion_bitmap_patron.h
video/representacion/representacion_grafica/representacion_texto/: representacion_texto.h  representacion_texto_auto.cpp  representacion_texto_auto.h  representacion_texto_fija.h
video/representacion/representacion_grafica/representacion_ttf/: representacion_ttf.cpp  representacion_ttf.h
video/representacion/representacion_primitiva/: representacion_primitiva.cpp  representacion_primitiva.h
video/representacion/representacion_primitiva/representacion_primitiva_caja/: representacion_primitiva_caja.cpp  representacion_primitiva_caja.h
video/representacion/representacion_primitiva/representacion_primitiva_linea/: representacion_primitiva_linea.cpp  representacion_primitiva_linea.h
video/representacion/representacion_primitiva/representacion_primitiva_poligono/: representacion_primitiva_poligono.cpp  representacion_primitiva_poligono.h
video/representacion/representacion_primitiva/representacion_primitiva_puntos/: representacion_primitiva_puntos.cpp  representacion_primitiva_puntos.h
video/representation/: CMakeLists.txt  representation.cpp  representation.h
video/representation/group/: CMakeLists.txt  group_representation.cpp  group_representation.h
video/representation/primitive/: CMakeLists.txt  primitive_representation.cpp  primitive_representation.h
video/representation/primitive/box/: CMakeLists.txt  box_primitive.cpp  box_primitive.h  box_representation.cpp  box_representation.h
video/representation/primitive/line/: CMakeLists.txt  line_primitive.cpp  line_primitive.h  line_representation.cpp  line_representation.h
video/representation/primitive/point/: CMakeLists.txt  point_primitive.cpp  point_primitive.h  point_representation.cpp  point_representation.h
video/representation/primitive/polygon/: CMakeLists.txt  polygon_primitive.cpp  polygon_primitive.h  polygon_representation.cpp  polygon_representation.h
video/representation/raster/: CMakeLists.txt  raster_representation.cpp  raster_representation.h
video/representation/raster/bitmap/: CMakeLists.txt  bitmap_representation.cpp  bitmap_representation.h
video/representation/raster/ttf/: CMakeLists.txt  ttf_representation.cpp  ttf_representation.h
video/resource_manager/: CMakeLists.txt  resource_manager.cpp  resource_manager.h
video/screen/: CMakeLists.txt  screen.cpp  screen.h
video/sdl_video_tools/: CMakeLists.txt  sdl_video_tools.cpp  sdl_video_tools.h
video/superficie/: superficie.cpp
video/surface/: CMakeLists.txt  canvas.cpp  canvas.h  image.cpp  image.h  surface.cpp  surface.h
video/textura/: textura.cpp  textura.h
video/texture/: CMakeLists.txt  texture.cpp  texture.h
video/ttf_font/: CMakeLists.txt  ttf_font.cpp  ttf_font.h
video/utilidades_graficas_sdl/: utilidades_graficas_sdl.cpp  utilidades_graficas_sdl.h
(+111 files in other folders)
