add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/audio_channel")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/audio_controller")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/music")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/real_audio_channel")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/resource_manager")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/sound")

set(SOURCE ${SOURCE} PARENT_SCOPE)